2007-09-12  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Fixup preferred size calculations for vertical toolbars. 
	Override GetPreferredSizeCore to perform calculations.  Remove custom
	autosize logic.  [Fixes bug #82739]

2007-09-12  Jonathan Pobst  <monkey@jpobst.com>

	* TextBoxBase.cs: Modified should default to false.

2007-09-11  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: Update the anchoring distances even when layout is supspended.
	Patch provided by George fixes bug #82805.

2007-09-11  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: Provide a setter for ExplicitHeight.
	* TextBoxBase.cs: Now that we have the implementation for explicit heights,
	remove the hacks in here for requested_height.
	[Fixes bug #82749]

2007-09-11  Jonathan Pobst  <monkey@jpobst.com>

	* ScrollBar.cs: Fix an issue reported on the lists where setting a scrollbar's
	Maximum to lower that its current Value caused an ArgumentException by setting
	the Value to the new Maximum.

2007-09-11  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs: Math is hard!  Fix some math so that the TrackBar
	handle moves to the closest tick when it is being dragged.
	[Fixes bug #82751]

2007-09-11  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripManager.cs: When we have added MDI buttons onto a MenuStrip, we
	can't let them count as real items when calculating where to merge in the
	user's items.  [Fixed bug #82786]

2007-09-10  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripMenuItem.cs: Add a parent type check so we don't crash on people
	who want to add a menu item directly onto a toolstrip.
	[Fixes bug #82775, part II]

2007-09-10  Jonathan Pobst  <monkey@jpobst.com>

	* StatusStrip.cs: Synchronize SetDisplayedItems with the ToolStrip version.
	* ToolStrip.cs: If a ToolStripItem set to not visible is added to a ToolStrip,
	don't set it to available.
	* ToolStripItem.cs: When Visible is changed, tell the owner to perform a layout.
	[Fixes bug #82727, part II]
